--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main {
+  max-width: 1920px;
+  display: flex;
+  justify-content: center;
+}
